tests/snapshots/files__map.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  i64-5871781006564002453:
    op: "1"
    children: []
    eclass: i64-5871781006564002453
    cost: 0
  String-9813572419544689236:
    op: "\"one\""
    children: []
    eclass: String-9813572419544689236
    cost: 0
  i64-11743562013128004906:
    op: "2"
    children: []
    eclass: i64-11743562013128004906
    cost: 0
  String-5473611670801099348:
    op: "\"two\""
    children: []
    eclass: String-5473611670801099348
    cost: 0
  MyMap-11743562013128004906:
    op: MyMap
    children:
      - i64-5871781006564002453
      - String-9813572419544689236
      - i64-11743562013128004906
      - String-5473611670801099348
    eclass: MyMap-11743562013128004906
    cost: 0
  my_map2-0:
    op: my_map2
    children: []
    eclass: MyMap-11743562013128004906
    cost: 9223372036854776000
  MyMap-5871781006564002453:
    op: MyMap
    children:
      - i64-5871781006564002453
      - String-9813572419544689236
    eclass: MyMap-5871781006564002453
    cost: 0
  my_map1-0:
    op: my_map1
    children: []
    eclass: MyMap-5871781006564002453
    cost: 9223372036854776000
root_eclasses: []
class_data:
  i64-5871781006564002453:
    type: i64
  String-9813572419544689236:
    type: String
  i64-11743562013128004906:
    type: i64
  String-5473611670801099348:
    type: String
  MyMap-11743562013128004906:
    type: MyMap
  MyMap-5871781006564002453:
    type: MyMap

