tests/snapshots/files__math_microbenchmark.snap
---
source: tests/files.rs
expression: snapshot_content
---
641743
345075
Add: 641743
Const: 5
Cos: 1
Diff: 13504
Div: 3
Integral: 32434
Ln: 1
Mul: 345075
Pow: 2
Sin: 1
Sqrt: 1
Sub: 15123
Var: 3
Add: 641743
Const: 5
Cos: 1
Diff: 13504
Div: 3
Integral: 32434
Ln: 1
Mul: 345075
Pow: 2
Sin: 1
Sqrt: 1
Sub: 15123
Var: 3
