tests/snapshots/files__math_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Const 1)
Add: 6642
Add: 1128
Const: 7
Const: 7
Cos: 0
Cos: 0
Diff: 0
Diff: 0
Div: 0
Div: 0
Integral: 0
Integral: 0
Ln: 0
Ln: 0
MathU: 163
MathU: 45
Mul: 1812
Mul: 367
Pow: 0
Pow: 0
Sin: 0
Sin: 0
Sqrt: 0
Sqrt: 0
Sub: 2
Sub: 2
Var: 1
Var: 1
evals-to: 51
evals-to: 12
is-const: 12
is-const: 7
is-const-or-distinct-var: 0
is-const-or-distinct-var: 0
is-const-or-distinct-var-demand: 0
is-const-or-distinct-var-demand: 0
is-not-zero: 9
is-not-zero: 6
is-sym: 1
is-sym: 1
