tests/snapshots/files__matrix_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
Id: 3
Kron: 5
Lit: 0
MMul: 12
NamedDim: 3
NamedMat: 3
Times: 3
ncols: 12
nrows: 12
