tests/snapshots/files__merge_during_rebuild.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  x-0:
    op: x
    children: []
    eclass: "0"
    cost: 9223372036854776000
  y-0:
    op: y
    children: []
    eclass: "1"
    cost: 9223372036854776000
  i64-5871781006564002453:
    op: "1"
    children: []
    eclass: i64-5871781006564002453
    cost: 0
  distance-5871781006564002453:
    op: distance
    children:
      - Node-0
      - Node-5871781006564002453
    eclass: i64-5871781006564002453
    cost: 1
  a-0:
    op: a
    children: []
    eclass: "0"
    cost: 9223372036854776000
  b-0:
    op: b
    children: []
    eclass: "1"
    cost: 9223372036854776000
  i64-0:
    op: "0"
    children: []
    eclass: i64-0
    cost: 0
  Node-0:
    op: Node
    children:
      - i64-0
    eclass: "0"
    cost: 1
  Node-5871781006564002453:
    op: Node
    children:
      - i64-5871781006564002453
    eclass: "1"
    cost: 1
  i64-11743562013128004906:
    op: "2"
    children: []
    eclass: i64-11743562013128004906
    cost: 0
  Node-11743562013128004906:
    op: Node
    children:
      - i64-11743562013128004906
    eclass: "0"
    cost: 1
  i64-17615343019692007359:
    op: "3"
    children: []
    eclass: i64-17615343019692007359
    cost: 0
  Node-17615343019692007359:
    op: Node
    children:
      - i64-17615343019692007359
    eclass: "1"
    cost: 1
root_eclasses: []
class_data:
  "0":
    type: N
  "1":
    type: N
  i64-5871781006564002453:
    type: i64
  i64-0:
    type: i64
  i64-11743562013128004906:
    type: i64
  i64-17615343019692007359:
    type: i64

